# hermes

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
Implementation/: WebSocketMessenger.cpp
Implementation/Beast/: Common.hpp
Implementation/Beast/Client/: BeastClient.cpp  BeastClient.hpp
Implementation/Beast/Connector/: DirectConnector.cpp  DirectConnector.hpp  IConnector.hpp  ProxyConnector.cpp  ProxyConnector.hpp
Implementation/Beast/Factory/: BeastClientFactory.hpp
Implementation/Beast/Messenger/: BeastMessenger.hpp
Implementation/Beast/SendPolicy/: AsyncSendPolicy.hpp  BeastSendPolicy.hpp  SyncSendPolicy.hpp
Implementation/Internal/: ClientCallbackInterfaces.hpp
Include/: WebSocketMessenger.hpp
examples/: CMakeLists.txt  hermes_async_example.cpp  hermes_basic_example.cpp  hermes_sync_example.cpp
